Overflow-x corrections for SideNav

--- a/frontend/src/app/components/sidebar-list/sidebar-list.component.scss
+++ b/frontend/src/app/components/sidebar-list/sidebar-list.component.scss
@@ -1,5 +1,6 @@
 .nav-list-container{
     border-radius: 0;
+    width: 95%;
 }
 
 a, mat-list-item{
