--- a/frontend/src/app/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/components/sidebar/sidebar.component.scss
@@ -8,10 +8,12 @@ mat-toolbar{
 
 .sidenav-content{
   padding: 2%;
+  width: 100%;
+  max-width: 100%;
 }
 
 .sidenav-container{
-  height: 93%;
+  height: 91.7%;
 }
 
 mat-sidenav, mat-sidenav-content{
@@ -19,7 +21,7 @@ mat-sidenav, mat-sidenav-content{
 }
 
 .sidenav{
-  border-radius: 0;                         
+  border-radius: 0;               
 }
 
 .toolbar-title{
