--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -19,6 +19,7 @@ $frontend-theme: mat.define-theme((
 
 html, body{
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
